--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,14 @@
 @import "semantic-ui";
+
+.chatbox {
+  height: 450px;
+}
+
+.ui.vertical.menu {
+  width: auto;
+  border: 0px;
+}
+
+.content2 {
+  padding: 0px;
+}
