--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -1,1 +1,77 @@
-<h1>You have reached the root route</h1>
+<h2 class="ui center aligned medium icon header">
+  <i class="green paper plane icon"></i>
+  chatalker
+</h2>
+
+<div class="ui two column grid">
+
+  <div class="twelve wide column">
+    <div class="ui fluid card chatbox">
+      <div class="content">
+
+        <div class="ui small feed">
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <em>Christian Rocha</em>: Test message
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <div class="extra content">
+        <form class="ui reply form">
+          <div class="field">
+            <div class="ui fluid icon input">
+              <input type="text" placeholder="Enter a message...">
+              <i class="bordered green edit icon"></i>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <div class="four wide column">
+    <div class="ui fluid card chatbox">
+      <div class="content2">
+
+        <div class="ui vertical menu">
+          <a class="active item">
+            Home
+          </a>
+          <a class="item">
+            Messages
+          </a>
+          <a class="item">
+            Friends
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</div>
