--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,12 +11,12 @@
         Account <i class="dropdown icon"></i>
         <div class="menu">
           <a class="item">Log out</a>
-          <a class="item">Log in</a>
-          <a class="item">Sign up</a>
+          <%= link_to "Log in", login_path, class: "item" %>
+          <%= link_to "Sign up", login_path, class: "item" %>
         </div>
       </div>
       <div class="item">
-          <div class="ui primary button">Sign Up</div>
+          <%= link_to "Sign Up", login_path, class: "ui green button" %>
       </div>
     </div>
   </div>
