--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,38 +8,19 @@
   <div class="twelve wide column">
     <div class="ui fluid card chatbox">
       <div class="content">
+        <% @messages.each do |message| %>
+          <div class="ui small feed">
+            
+            <div class="event">
+              <div class="content">
 
-        <div class="ui small feed">
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <em>Christian Rocha</em>: Test message
-              </div>
-            </div>
-          </div>
-        </div>
+                <em>Christian Rocha</em>: <%= link_to message.body, root_path(message), class: "summary" %>
 
+              </div>
+            </div>
+            
+          </div>
+        <% end %>
       </div>
       <div class="extra content">
         <form class="ui reply form">
