--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,14 +8,18 @@
       <div class="ui dropdown item">
         Account <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item">Log out</a>
-          <%= link_to "Log in", login_path, class: "item" %>
-          <%= link_to "Sign up", login_path, class: "item" %>
+          <% if logged_in? %>
+            <%= link_to "Log out", logout_path, method: :delete, class: "item" %>
+          <% else %>
+            <%= link_to "Log in", login_path, class: "item" %>
+          <% end %>
         </div>
       </div>
+      <% if !logged_in? %>
       <div class="item">
           <%= link_to "Sign Up", login_path, class: "ui green button" %>
       </div>
+      <% end %>
     </div>
   </div>
 </div>
