add messages from ui

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -15,14 +15,14 @@
 
       </div>
       <div class="extra content">
-        <form class="ui reply form">
+        <%= form_with(model: @message, url: message_path, class: "ui reply form") do |f| %>
           <div class="field">
             <div class="ui fluid icon input">
-              <input type="text" placeholder="Enter a message...">
-              <i class="bordered green edit icon"></i>
+              <%= f.text_field :body, placeholder: "Enter a message" %>
+              <%= f.button '<i class="bordered green edit icon"></i>'.html_safe %>
             </div>
           </div>
-        </form>
+        <% end %>
       </div>
     </div>
   </div>
