--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
       </div>
       <% if !logged_in? %>
       <div class="item">
-          <%= link_to "Sign Up", login_path, class: "ui green button" %>
+          <%= link_to "Sign Up", signup_path, class: "ui green button" %>
       </div>
       <% end %>
     </div>
