--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -7,15 +7,15 @@
 
   <div class="twelve wide column">
     <div class="ui fluid card chatbox">
-      <div class="content">
+      <div class="content id="messages">
         
-        <div class="ui small feed">
+        <div class="ui small feed" id="message-container">
           <%= render @messages %>
         </div>
 
       </div>
       <div class="extra content">
-        <%= form_with(model: @message, url: message_path, class: "ui reply form") do |f| %>
+        <%= form_with(model: @message, url: message_path, class: "ui reply form", remote: true) do |f| %>
           <div class="field">
             <div class="ui fluid icon input">
               <%= f.text_field :body, placeholder: "Enter a message" %>
