--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -7,7 +7,7 @@
 
   <div class="twelve wide column">
     <div class="ui fluid card chatbox">
-      <div class="content id="messages">
+      <div class="content" id="messages">
         
         <div class="ui small feed" id="message-container">
           <%= render @messages %>
@@ -15,11 +15,13 @@
 
       </div>
       <div class="extra content">
-        <%= form_with(model: @message, url: message_path, class: "ui reply form", remote: true) do |f| %>
+        <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path, remote: true) do |f| %>
           <div class="field">
             <div class="ui fluid icon input">
               <%= f.text_field :body, placeholder: "Enter a message" %>
-              <%= f.button '<i class="bordered green edit icon"></i>'.html_safe %>
+              <%= f.button id: "submit-button" do %>
+                <i class="bordered green edit icon"></i>
+              <% end %>
             </div>
           </div>
         <% end %>
